<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app ="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_flyers"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/menu_flyers_list"/>
    <item
        android:id="@+id/menu_refresh"
        android:icon="@android:drawable/stat_notify_sync"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/menu_shopping_list"/>
    <item
        android:id="@+id/menu_shopping_list"
        android:icon="@android:drawable/stat_notify_sync"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_shopping_list"/>
    <item
        android:id="@+id/menu_compare"
        android:icon="@android:drawable/star_big_on"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_compare"/>
    <item
        android:id="@+id/menu_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_share"/>
    <item
        android:id="@+id/menu_setting"
        android:icon="@android:drawable/star_big_on"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_settings"/>
</menu>